include(CMakeToolsHelpers OPTIONAL)
cmake_minimum_required(VERSION 3.1.0)
project(gtestProject)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
include_directories(./include)
include(GoogleTest)
link_directories(./lib)
add_executable(gtestProj GTestLeetcode.cpp)
target_link_libraries(gtestProj gtest)